Update Dni “2018-04-25-rzym-dzień-4”

--- a/_posts/days/2018-04-25-rzym-dzień-4.md
+++ b/_posts/days/2018-04-25-rzym-dzień-4.md
@@ -3,10 +3,9 @@ layout: post
 title: 'Rzym - Dzień #4'
 date: '2018-04-25T23:22:41+02:00'
 featured-img: /assets/img/uploads/colosseum.jpg
-country: IT
+country: Włochy
 tags:
   - Rzym
   - Włochy
-  - test
 ---
 # Witam serdecznie.
